--- a/reports/water_analysis_20210121.Rmd
+++ b/reports/water_analysis_20210121.Rmd
@@ -110,7 +110,14 @@ nepal_river_data_formatted <-
         river_pcr_paratyphi_1_t16_ct  < 35 | river_pcr_paratyphi_1_t16_ct < 35,
         "Pos",
         "Neg"
-        ), 
+        ),
+    typhi_border = 
+      case_when(
+        river_pcr_paratyphi_1_t16_ct  < 35 | river_pcr_paratyphi_1_t16_ct < 35 ~ "Pos", 
+        (river_pcr_paratyphi_1_t16_ct  > 35 & river_pcr_paratyphi_1_t16_ct  < 40) | 
+          (river_pcr_paratyphi_1_t16_ct  > 35 & river_pcr_paratyphi_1_t16_ct  < 40) ~ "Border", 
+        TRUE ~ "Neg"
+      ),
     sample_date = floor_date(as_date(river_datetime), "week")
   ) %>% 
   drop_na(typhi_pos)
@@ -136,8 +143,29 @@ nepal_river_data_formatted %>%
     fill = ""
   )
   
-nepa_river_data_formatted %>% 
-  write_csv("/Users/ChrisLeBoa/Documents/Work/Research/Andrews Lab/SEES_DataCleaning/SEAPSEES_river_data_formatted.csv")
+## Test with border
+nepal_river_data_formatted %>% 
+  ggplot() +
+  geom_point(
+    aes(x = sample_date, y = sample_id, fill = as_factor(typhi_border)),
+    shape = 21, size = 6
+    ) +
+  scale_x_date(date_breaks = "2 months", date_labels = "%B %Y") +
+  scale_fill_manual(values = c("chartreuse3", "red", "yellow" )) +
+  theme(
+    legend.position = "top",
+    legend.text = element_text(size = 16),
+    axis.text.y = element_text(size = 16), 
+    axis.text.x = element_text(size = 12)
+    ) + 
+  labs(
+    title = "S.Typhi River Water Results",
+    y = "", 
+    x = "", 
+    fill = ""
+  )
+  
+
 
 
 ```
@@ -404,3 +432,231 @@ nepal_river_data_formatted %>%
   )
 
 ```
+#Positivity Count
+```{r}
+nepal_river_data_formatted %>% 
+  filter(is.na(redcap_repeat_instance) | redcap_repeat_instance == 1) %>% 
+  group_by(sample_id) %>% 
+  summarise(
+    typhi_total = sum(typhi_pos == "Pos", na.rm = TRUE),
+    paratyphi_total = sum(paratyphi_pos == "Pos", na.rm = TRUE)
+  ) %>% 
+  write_csv("/Users/ChrisLeBoa/GitHub/typhoid_research/nepal_typhoid/data/rivers/pos.csv")
+```
+
+#COUNT DNA and Phage 
+```{r}
+##Typhi 
+nepal_river_data_formatted %>%
+  filter(is.na(redcap_repeat_instance) | redcap_repeat_instance == 1) %>% 
+    group_by(sample_id) %>% 
+  summarise(
+    typhi_total = sum(typhi_pos == "Pos", na.rm = TRUE),
+    paratyphi_total = sum(paratyphi_pos == "Pos", na.rm = TRUE), 
+    typhi_phage_total = sum(river_phage_typhi, na.rm = TRUE)
+  ) %>% 
+  mutate(
+    mapping_typhi_DNA = typhi_total, 
+    mapping_paratyphi_DNA = paratyphi_total
+  ) %>% 
+  pivot_longer(
+    cols = starts_with("typhi"), 
+    names_to = "typhi",
+    values_to = "sample_trips_positive"
+  ) %>% 
+  mutate(
+    typhi =
+      if_else(str_detect(typhi, "phage") == TRUE, "phage", "DNA")
+  ) %>% 
+  ggplot(aes(x = reorder(sample_id, c(-mapping_typhi_DNA)))) +
+  geom_col(
+    aes(
+      y = sample_trips_positive, fill = typhi),
+    position = position_dodge(width=0.7),
+    width = .7
+  ) +
+  geom_hline(aes(yintercept = 13), color = "grey60") +
+  theme(
+    legend.position = "bottom", 
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    title = "Sampling Points Positive for S. Typhi", 
+    x = "Sampling Location",
+    y = "Positive results from first 13 trips", 
+    fill = "Type of Contamination"
+  )
+
+## Paratyphi
+nepal_river_data_formatted %>%
+  filter(is.na(redcap_repeat_instance) | redcap_repeat_instance == 1) %>% 
+    group_by(sample_id) %>% 
+  summarise(
+    typhi_total = sum(typhi_pos == "Pos", na.rm = TRUE),
+    paratyphi_total = sum(paratyphi_pos == "Pos", na.rm = TRUE), 
+    typhi_phage_total = sum(river_phage_typhi, na.rm = TRUE), 
+    paratyphi_phage_total = sum(river_phage_paratyphi, na.rm = TRUE)
+  ) %>% 
+  mutate(
+    mapping_typhi_DNA = typhi_total, 
+    mapping_paratyphi_DNA = paratyphi_total
+  ) %>% 
+  pivot_longer(
+    cols = starts_with("para"), 
+    names_to = "paratyphi",
+    values_to = "sample_trips_positive"
+  ) %>% 
+  mutate(
+    paratyphi =
+      if_else(str_detect(paratyphi, "phage") == TRUE, "phage", "DNA")
+  ) %>% 
+  ggplot(aes(x = reorder(sample_id, c(-mapping_paratyphi_DNA)))) +
+  geom_col(
+    aes(
+      y = sample_trips_positive, fill = paratyphi),
+    position = position_dodge(width=0.7),
+    width = .7
+  ) +
+  geom_hline(aes(yintercept = 13), color = "grey60") +
+  theme(
+    legend.position = "bottom", 
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    title = "Sampling Points Positive for S. Paratyphi", 
+    x = "Sampling Location",
+    y = "Positive results from first 13 trips", 
+    fill = "Type of Contamination"
+  )
+```
+
+
+```{r}
+nepal_river_data_formatted %>%
+  filter(is.na(redcap_repeat_instance) | redcap_repeat_instance == 1) %>% 
+  #  group_by(sample_id) %>% 
+  summarise(
+    typhi_total = sum(typhi_pos == "Pos", na.rm = TRUE),
+    paratyphi_total = sum(paratyphi_pos == "Pos", na.rm = TRUE), 
+    typhi_phage_total = sum(river_phage_typhi, na.rm = TRUE), 
+    paratyphi_phage_total = sum(river_phage_paratyphi, na.rm = TRUE)
+  )
+```
+#Phage and Coliform Counts
+```{r}
+nepal_river_data_formatted %>% 
+  filter(
+    is.na(redcap_repeat_instance) | redcap_repeat_instance == 1, 
+    !is.na(river_e_coli_count)
+    ) %>% 
+  ggplot(aes(as.Date(river_datetime), river_e_coli_count)) +
+  geom_point(aes(color = sample_id)) + 
+  geom_smooth() + 
+  scale_y_continuous(labels = scales::label_comma()) +
+  labs(
+   title =  "Coliform Contamination over Time", 
+   x = "", 
+   y = "Coliform Count (colonies per mL)"
+  )
+
+nepal_river_data_formatted %>% 
+  filter(
+    is.na(redcap_repeat_instance) | redcap_repeat_instance == 1, 
+    !is.na(river_e_coli_count)
+    ) %>% 
+  mutate(
+    sample_week = floor_date(sample_date, "week"),    
+    redcap_event_name = str_replace_all(str_extract(redcap_event_name, "[^a]+"), "_", " "), 
+    ) %>% 
+  ggplot(aes(redcap_event_name, river_e_coli_count)) +
+  geom_boxplot() + 
+  geom_point(aes(color = sample_id)) + 
+  scale_y_continuous(labels = scales::label_comma()) +
+  theme(axis.text.x = element_text(angle = 45, vjust = .8)) + 
+  labs(
+   title =  "Coliform Contamination over Time", 
+   x = "", 
+   y = "Coliform Count (colonies per mL)"
+  )
+
+nepal_river_data_formatted %>% 
+  ggplot(aes(redcap_event_name, river_phage_typhi_count, color = redcap_event_name)) +
+  geom_boxplot() + 
+  theme(axis.text.x = element_text(angle = 45, vjust = .8)) 
+
+nepal_river_data_formatted %>% 
+  filter(is.na(redcap_repeat_instance) | redcap_repeat_instance == 1) %>% 
+  mutate(
+    sample_week = floor_date(sample_date, "week"),    
+    redcap_event_name = str_replace_all(str_extract(redcap_event_name, "[^a]+"), "_", " "), 
+    ) %>% 
+  pivot_longer(cols = c(river_phage_paratyphi, river_phage_typhi), names_to = "organism", values_to = "phage") %>% 
+  group_by(redcap_event_name, organism) %>% 
+  count(phage) %>% 
+  filter(phage == 1) %>% 
+  ggplot() + 
+  geom_col(aes(redcap_event_name, n, fill = organism), position = "dodge") + 
+  geom_hline(yintercept = 19, color = "blue") +
+  theme(axis.text.x = element_text(angle = 45, vjust = .8)) + 
+  labs(
+    title = "Phage presence by Sampling Trip", 
+    y = "Number of Positive Locations", 
+    x = "Sampling Trip"
+  ) 
+  
+nepal_river_data_formatted %>% 
+  filter(is.na(redcap_repeat_instance) | redcap_repeat_instance == 1) %>% 
+  filter(sample_id %in% c("COM-1", "COM-2", "COM-3", "BAG-1")) %>% 
+  ggplot(aes(as.Date(river_datetime), river_phage_paratyphi_count, color = sample_id)) +
+  geom_point() +
+  geom_smooth(se=F) + 
+  labs(
+    title = "Number of S.Paratyphi Phages in Always Positive Sites", 
+    x = "Date", 
+    y = "Phage Count"
+  )
+
+```
+```{r}
+nepal_river_data_formatted %>% 
+  filter(river_sewer_draining > 0) %>% 
+  count(sample_id)
+
+nepal_river_data_formatted %>% 
+  filter(river_bathing == 1) %>% 
+  count(sample_id)
+
+nepal_river_data_formatted %>% 
+  filter(river_walk_across == 1) %>% 
+  count(sample_id)
+
+nepal_river_data_formatted %>% 
+  filter(river_wash_veg == 1) %>% 
+  count(sample_id, typhi_pos, paratyphi_pos)
+
+nepal_river_data_formatted %>% 
+  filter(river_feces == 1) %>% 
+  count(sample_id)
+
+nepal_river_data_formatted %>% 
+  filter(river_wash_clothes == 1) %>% 
+  count(river_wash_clothes_reason)
+
+nepal_river_data_formatted %>% 
+  filter(river_agriculture == 1) %>% 
+  count(sample_id)
+
+nepal_river_data_formatted %>% 
+  mutate(active_sewage = case_when(
+    river_sewer_draining > 0 ~  1, 
+    is.na(river_sewer_draining) ~ 0,
+    TRUE ~ 0), 
+    ) %>% 
+  count(active_sewage, typhi_pos)
+  ggplot(aes(river_date, typhi_pos, color = active_sewage))
+  
+  
+
+  
+```
+
